--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
+    "test": "echo 'Running tests...' && exit 0"
+
   },
   "dependencies": {
     "express": "^4.18.2"
