--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "nodejs-app",
+  "name": "nodejs-pipeline-demo",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
-    "test": "echo 'Running tests...' && exit 0"
-
+    "start": "node app.js",
+    "test": "echo \"Running tests...\" && exit 0"
   },
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "dependencies": {}
 }
